DSE 5.1.0
 * Improve metrics and reduce overhead under contention (APOLLO-81)
 * Make SinglePartitionReadCommand::queriesMulticellType() faster (APOLLO-117)
 * Accept internal resource name in GRANT/REVOKE statements (APOLLO-113)
 * Improve StatementRestrictions::getPartitionKeys() execution speed (APOLLO-115)
 * Move responsibility for qualifying ks in authz stmts to IResource (APOLLO-76)
 * Insert default superuser role with fixed timestamp (APOLLO-18)
 * Make Permissions extensible (APOLLO-26)
 * Make IResource more easily extensible (APOLLO-26)
 * Add method to IAuthenticator to login by user as well as by role (APOLLO-70)
 * Add private protocol version (APOLLO-2)
Merged from DSE 5.0.4
 * Backport CASSANDRA-12461 (Add pre- and post-shutdown hooks to Storage Service) (APOLLO-48)
 * Wait for remaining tasks to finish on RepairJob after task failure (APOLLO-87)
 * Allow the prepared statement cache size to be changed. (APOLLO-50)


3.12
 * Add mutation size and batch metrics (CASSANDRA-12649)
 * Add method to get size of endpoints to TokenMetadata (CASSANDRA-12999)
 * Fix primary index calculation for SASI (CASSANDRA-12910)
 * Expose time spent waiting in thread pool queue (CASSANDRA-8398)
 * Conditionally update index built status to avoid unnecessary flushes (CASSANDRA-12969)
 * NoReplicationTokenAllocator should work with zero replication factor (CASSANDRA-12983)
 * cqlsh auto completion: refactor definition of compaction strategy options (CASSANDRA-12946)
 * Add support for arithmetic operators (CASSANDRA-11935)
 * Tables in system_distributed should not use gcgs of 0 (CASSANDRA-12954)


3.10
 * Remove outboundBindAny configuration property (CASSANDRA-12673)
 * Use correct bounds for all-data range when filtering (CASSANDRA-12666)
 * Remove timing window in test case (CASSANDRA-12875)
 * Resolve unit testing without JCE security libraries installed (CASSANDRA-12945)
 * Fix inconsistencies in cassandra-stress load balancing policy (CASSANDRA-12919)